--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Enyoiers</h1>
+    <header>
+        <div class="logo-header">
+            <img src="" alt="Logo site">
+        </div>
+        <div class="main-menu">
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Nosotros</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </div>
+    </header>
+    <main>
+        <h1>Hello Enyoiers</h1>
+    </main>
 </body>
 </html>
