add footer home

--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
     <main>
         <h1>Hello Enyoiers</h1>
     </main>
+    <footer>
+        <div>by DevAlz 2024</div>
+    </footer>
 </body>
 </html>
