--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <div class="logo-header">
-            <img src="" alt="Logo site">
+            <img src="#" alt="Logo site">
         </div>
         <div class="main-menu">
             <ul>
